apps/arr/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: arr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
      app: prowlarr
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prowlarr
        app: prowlarr
    spec:
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:1.19.0
          ports:
            - name: prowlarr
              containerPort: 9696
          volumeMounts:
            - mountPath: /config
              name: config
      volumes:
        - name: config
          hostPath:
            path: /var/openebs/local/data/arr/prowlarr
            type: DirectoryOrCreate
