apps/arr/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr-service
  namespace: arr
  labels:
    app.kubernetes.io/name: prowlarr
    app: prowlarr
spec:
  ports:
    - port: 9696
      targetPort: prowlarr
      name: prowlarr
  selector:
    app.kubernetes.io/name: prowlarr
    app: prowlarr
