apps/arr/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  namespace: arr
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.222
    traefik.ingress.kubernetes.io/router.entrypoints: local
    traefik.ingress.kubernetes.io/router.middlewares: traefik-authentik-middleware@kubernetescrd
#    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: prowlarr.local.boomerok.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr-service
                port:
                  name: prowlarr
  tls:
    - secretName: local-tls
      hosts:
        - prowlarr.local.boomerok.dev
